--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:support-compat:24.2.1'
+    compile 'com.android.support:appcompat-v7:24.2.0'
+
 
     apt "org.androidannotations:androidannotations:4.1.0"
     compile "org.androidannotations:androidannotations-api:4.1.0"
